[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Font/simhei.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Map/MapStart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/GameStart.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Font/simhei.ttf"

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = SubResource( 2 )

[node name="GameStart" type="Node2D"]
script = ExtResource( 3 )

[node name="Map01" parent="." instance=ExtResource( 2 )]

[node name="LabelLoading" type="Label" parent="."]
margin_left = 56.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "加载中..."
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 200.0
margin_right = 184.0
margin_bottom = 261.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "抵制不良游戏，拒绝盗版游戏。
注意自我保护，谨防受骗上当。
适度游戏益脑，沉迷游戏伤身。
合理安排时间，享受健康生活。"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]

[node name="TimerLoading" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 16.0
margin_top = 40.0
margin_right = 166.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.980392, 0.87451, 0.396078, 1 )
custom_colors/font_outline_modulate = Color( 0.282353, 0.701961, 0.258824, 1 )
custom_colors/font_color_shadow = Color( 0.105882, 0.0941176, 0.0470588, 1 )
custom_fonts/font = SubResource( 3 )
text = "灵宠梦界"
align = 1
valign = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerLoading" to="." method="_on_TimerLoading_timeout"]
